# tsi

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
docs/: 1d_example.md  2d_examples.md  PowerStudy.md  cs1.md  cs2.md  cs3.md  figures.md  index.md
docs/_layouts/: default.html
other_figures/: dgp.ipynb  figure_1.ipynb  schema.ipynb  utils.py
src/tsi/brutus/: clean_example_sets.ipynb  clean_figures.ipynb  cli.py  data_generation.ipynb  inference.ipynb  points_of_interest.ipynb  priors.ipynb
src/tsi/common/: monotone_nn.py  utils.py
src/tsi/gamma/: .gitignore  clean_figures.ipynb  configs.py  cr_sources.py  diagnostics.py  image_sorter.ipynb  manifest.py  nde_models.py  plotting.py  posteriors.py  raw_events.py  results_reader.ipynb  run_experiment.py  simple_sims.ipynb  test_all.py  tiled_events.py  universal.py  util.py
src/tsi/gaussian_mixture/: concept_shift_freb_fmpe_mnn.py  concept_shift_restricted_reference_freb_fmpe_catgb.py  concept_shift_restricted_reference_freb_fmpe_mnn.py  concept_shift_restricted_reference_freb_fmpe_pvalues_catgb.py  default_freb_fmpe_mnn.py  dev.ipynb  estimate_2D_gmm.py  figures.ipynb  figures_for_gmm.ipynb  freb_with_fm_and_mnn.ipynb  freb_with_fm_and_mnn.py  freb_with_gam.ipynb  freb_with_gam.py  freb_with_gam_experimenting.ipynb  freb_with_logistic_regression.ipynb  freb_with_logistic_regression.py  freb_with_mnn.ipynb  freb_with_mnn.py  misspecified_posterior_fmpe_pvalues_catgb.py  misspecified_posterior_fmpe_pvalues_gam.py  misspecified_posterior_fmpe_pvalues_mnn.py  restricted_ref_freb_fmpe_catgb.py  restricted_ref_freb_fmpe_mnn.py  restricted_ref_full_freb_fmpe_mnn.py  well_specified_posterior_fmpe_pvalues_mnn.py
src/tsi/milkyway/: .gitignore  environment.yml
src/tsi/temp/: test_autogluon_gmm.ipynb  test_fmpe.ipynb  test_npe.ipynb  test_npse.ipynb  utils.py
src/tsi/toy_example/: custom_fmpe.py  dingo_fmpe.py  hpd_vs_confset.ipynb  power_study.ipynb  power_study.py  utils.py
src/tsi/two_moons/: figures.ipynb  hpd_vs_confset.ipynb  posterior_v_waldo.ipynb  posterior_v_waldo.py  posterior_v_waldo_strong_prior_fm.py  (+6 more)
(+11 files in other folders)
